--- a/less/global/fonts.less
+++ b/less/global/fonts.less
@@ -2,7 +2,7 @@
   font-family: 'rouble';
   font-style: normal;
   font-weight: 400;
-  src: url("/fonts/rouble.ttf") format("truetype");
+  src: url("../fonts/rouble.ttf") format("truetype");
 }
 
 @font-face {
@@ -11,7 +11,7 @@
   font-weight: 300;
   src: local("Exo-2 Medium "),
   local("Exo2-Medium"),
-  url("/fonts/ttf/Exo2-Medium.ttf") format("truetype");
+  url("../fonts/ttf/Exo2-Medium.ttf") format("truetype");
 }
 
 @font-face {
@@ -20,7 +20,7 @@
   font-weight: 300;
   src: local("Exo-2 Medium Italic"),
   local("Exo2-Medium-Italic"),
-  url("/fonts/ttf/Exo2-MediumItalic.ttf") format("truetype");
+  url("../fonts/ttf/Exo2-MediumItalic.ttf") format("truetype");
 }
 
 @font-face {
@@ -29,8 +29,8 @@
   font-weight: 400;
   src: local("Exo-2"),
   local("Exo2"),
-  url("/fonts/Exo2.0-Regular.otf?") format("opentype"),
-  url("/fonts/ttf/Exo2-Regular.ttf") format("truetype");
+  url("../fonts/Exo2.0-Regular.otf?") format("opentype"),
+  url("../fonts/ttf/Exo2-Regular.ttf") format("truetype");
 }
 
 @font-face {
@@ -39,8 +39,8 @@
   font-weight: 400;
   src: local("Exo-2"),
   local("Exo2"),
-  url("/fonts/Exo2.0-Italic.otf?") format("opentype"),
-  url("/fonts/ttf/Exo2-Italic.ttf") format("truetype");
+  url("../fonts/Exo2.0-Italic.otf?") format("opentype"),
+  url("../fonts/ttf/Exo2-Italic.ttf") format("truetype");
 }
 
 @font-face {
@@ -49,8 +49,8 @@
   font-weight: 700;
   src: local("Exo-2 Bold"),
   local("Exo2-Bold"),
-  url("/fonts/Exo2.0-Bold.otf?") format("opentype"),
-  url("/fonts/ttf/Exo2-Bold.ttf") format("truetype");
+  url("../fonts/Exo2.0-Bold.otf?") format("opentype"),
+  url("../fonts/ttf/Exo2-Bold.ttf") format("truetype");
 }
 
 @font-face {
@@ -59,7 +59,7 @@
   font-weight: 700;
   src: local("Exo-2 Bold Italic"),
   local("Exo2-Bold-Italic"),
-  url("/fonts/ttf/Exo2-BoldItalic.ttf") format("truetype");
+  url("../fonts/ttf/Exo2-BoldItalic.ttf") format("truetype");
 }
 
 @font-face {
@@ -68,7 +68,7 @@
   font-weight: 900;
   src: local("Exo-2 Black "),
   local("Exo2-Black"),
-  url("/fonts/ttf/Exo2-Black.ttf") format("truetype");
+  url("../fonts/ttf/Exo2-Black.ttf") format("truetype");
 }
 
 @font-face {
@@ -77,7 +77,7 @@
   font-weight: 900;
   src: local("Exo-2 Black Italic"),
   local("Exo2-Medium-Italic"),
-  url("/fonts/ttf/Exo2-BlackItalic.ttf") format("truetype");
+  url("../fonts/ttf/Exo2-BlackItalic.ttf") format("truetype");
 }
 
 @font-face {
@@ -86,6 +86,6 @@
   font-weight: 900;
   src: local("Panton Black Italic"),
   local("Panton-Black-Italic"),
-  url("/fonts/Panton-BlackItalic.otf?") format("opentype");
+  url("../fonts/Panton-BlackItalic.otf?") format("opentype");
 }
 
