--- a/css/style.css
+++ b/css/style.css
@@ -2,61 +2,61 @@
   font-family: 'rouble';
   font-style: normal;
   font-weight: 400;
-  src: url("/fonts/rouble.ttf") format("truetype");
+  src: url("../fonts/rouble.ttf") format("truetype");
 }
 @font-face {
   font-family: 'Exo 2';
   font-style: normal;
   font-weight: 300;
-  src: local("Exo-2 Medium "), local("Exo2-Medium"), url("/fonts/ttf/Exo2-Medium.ttf") format("truetype");
+  src: local("Exo-2 Medium "), local("Exo2-Medium"), url("../fonts/ttf/Exo2-Medium.ttf") format("truetype");
 }
 @font-face {
   font-family: 'Exo 2';
   font-style: italic;
   font-weight: 300;
-  src: local("Exo-2 Medium Italic"), local("Exo2-Medium-Italic"), url("/fonts/ttf/Exo2-MediumItalic.ttf") format("truetype");
+  src: local("Exo-2 Medium Italic"), local("Exo2-Medium-Italic"), url("../fonts/ttf/Exo2-MediumItalic.ttf") format("truetype");
 }
 @font-face {
   font-family: 'Exo 2';
   font-style: normal;
   font-weight: 400;
-  src: local("Exo-2"), local("Exo2"), url("/fonts/Exo2.0-Regular.otf?") format("opentype"), url("/fonts/ttf/Exo2-Regular.ttf") format("truetype");
+  src: local("Exo-2"), local("Exo2"), url("../fonts/Exo2.0-Regular.otf?") format("opentype"), url("../fonts/ttf/Exo2-Regular.ttf") format("truetype");
 }
 @font-face {
   font-family: 'Exo 2';
   font-style: italic;
   font-weight: 400;
-  src: local("Exo-2"), local("Exo2"), url("/fonts/Exo2.0-Italic.otf?") format("opentype"), url("/fonts/ttf/Exo2-Italic.ttf") format("truetype");
+  src: local("Exo-2"), local("Exo2"), url("../fonts/Exo2.0-Italic.otf?") format("opentype"), url("../fonts/ttf/Exo2-Italic.ttf") format("truetype");
 }
 @font-face {
   font-family: 'Exo 2';
   font-style: normal;
   font-weight: 700;
-  src: local("Exo-2 Bold"), local("Exo2-Bold"), url("/fonts/Exo2.0-Bold.otf?") format("opentype"), url("/fonts/ttf/Exo2-Bold.ttf") format("truetype");
+  src: local("Exo-2 Bold"), local("Exo2-Bold"), url("../fonts/Exo2.0-Bold.otf?") format("opentype"), url("../fonts/ttf/Exo2-Bold.ttf") format("truetype");
 }
 @font-face {
   font-family: 'Exo 2';
   font-style: italic;
   font-weight: 700;
-  src: local("Exo-2 Bold Italic"), local("Exo2-Bold-Italic"), url("/fonts/ttf/Exo2-BoldItalic.ttf") format("truetype");
+  src: local("Exo-2 Bold Italic"), local("Exo2-Bold-Italic"), url("../fonts/ttf/Exo2-BoldItalic.ttf") format("truetype");
 }
 @font-face {
   font-family: 'Exo 2';
   font-style: normal;
   font-weight: 900;
-  src: local("Exo-2 Black "), local("Exo2-Black"), url("/fonts/ttf/Exo2-Black.ttf") format("truetype");
+  src: local("Exo-2 Black "), local("Exo2-Black"), url("../fonts/ttf/Exo2-Black.ttf") format("truetype");
 }
 @font-face {
   font-family: 'Exo 2';
   font-style: italic;
   font-weight: 900;
-  src: local("Exo-2 Black Italic"), local("Exo2-Medium-Italic"), url("/fonts/ttf/Exo2-BlackItalic.ttf") format("truetype");
+  src: local("Exo-2 Black Italic"), local("Exo2-Medium-Italic"), url("../fonts/ttf/Exo2-BlackItalic.ttf") format("truetype");
 }
 @font-face {
   font-family: 'Panton';
   font-style: italic;
   font-weight: 900;
-  src: local("Panton Black Italic"), local("Panton-Black-Italic"), url("/fonts/Panton-BlackItalic.otf?") format("opentype");
+  src: local("Panton Black Italic"), local("Panton-Black-Italic"), url("../fonts/Panton-BlackItalic.otf?") format("opentype");
 }
 /*! normalize.css v5.0.0 | MIT License | github.com/necolas/normalize.css */
 /**
